@@ -1,4 +1,5 @@
 Sep 11 2002  2.5.2  Added soundopts config file option per Mathias' suggestion
+                    Implemented feature order in gpsmap
 Sep 10 2002  2.5.2  Added more imagemagick exception catching/handling 
                      to gpsmap
                     Fixed silly typo for default image size in gpsmap
